fixed layout issue in category page

--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,10 @@ ul{
   list-style-type: none;
 }
 
-.hide{
-  opacity: 0;
+@media screen and (max-width: 640px){
+  .mob-hide{
+    opacity: 0;
+  }
 }
+
 
